fixed it yet again the overlow on the site-container. this time I made it auto instead of hidden, as it allows the page to bleed into the nav menu (second attempt, accidently used a hash instead of a period

--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ p{
     line-height: 1.2em;
     margin-bottom: 20px;
 }
-#site-container {
+.site-container {
     overflow: auto;
 }
 #main-content{
